feat: 🎸 Agent Executor JDK 1.8 version