@@ -1,5 +1,6 @@
 package org.bsc.langgraph4j.agentexecutor.actions;
 
+import dev.langchain4j.agent.tool.ToolExecutionRequest;
 import dev.langchain4j.data.message.ToolExecutionResultMessage;
 import lombok.NonNull;
 import lombok.extern.slf4j.Slf4j;
@@ -7,9 +8,11 @@ import org.bsc.langgraph4j.action.NodeAction;
 import org.bsc.langgraph4j.agentexecutor.Agent;
 import org.bsc.langgraph4j.agentexecutor.state.AgentAction;
 import org.bsc.langgraph4j.agentexecutor.AgentExecutor;
+import org.bsc.langgraph4j.agentexecutor.state.AgentOutcome;
 import org.bsc.langgraph4j.agentexecutor.state.IntermediateStep;
 import org.bsc.langgraph4j.langchain4j.tool.ToolNode;
 
+import java.util.Collections;
 import java.util.Map;
 
 import static java.util.Optional.ofNullable;
@@ -54,17 +57,17 @@ public class ExecuteTools implements NodeAction<AgentExecutor.State> {
     public Map<String,Object> apply(AgentExecutor.State state )  {
         log.trace( "executeTools" );
 
-        var agentOutcome = state.agentOutcome().orElseThrow(() -> new IllegalArgumentException("no agentOutcome provided!"));
+        AgentOutcome agentOutcome = state.agentOutcome().orElseThrow(() -> new IllegalArgumentException("no agentOutcome provided!"));
 
-        var toolExecutionRequest = ofNullable(agentOutcome.action())
-                .map(AgentAction::toolExecutionRequest)
+        ToolExecutionRequest toolExecutionRequest = ofNullable(agentOutcome.getAction())
+                .map(AgentAction::getToolExecutionRequest)
                 .orElseThrow(() -> new IllegalStateException("no action provided!" ))
                 ;
-        var result = toolNode.execute( toolExecutionRequest )
+        String result = toolNode.execute( toolExecutionRequest )
                 .map( ToolExecutionResultMessage::text )
                 .orElseThrow(() -> new IllegalStateException("no tool found for: " + toolExecutionRequest.name()));
 
-        return Map.of("intermediate_steps", new IntermediateStep( agentOutcome.action(), result ) );
+        return Collections.singletonMap("intermediate_steps", new IntermediateStep( agentOutcome.getAction(), result ) );
 
     }
 
